fixed alignment on skill icons.

--- a/src/styles/pages/_skills.scss
+++ b/src/styles/pages/_skills.scss
@@ -22,6 +22,8 @@
       margin: 30px 0;
     }
     li .skill-icon-box {
+      align-items: center;
+      justify-content: center;
       padding: 0 10px;
       min-height: 44.25px;
       + p {
